syntax = "proto3";

option go_package = "xmbsmdsj.com/mediumkube/pkg/daemon/mgrpc";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./domain.proto


service DomainSercice {
    rpc ListDomains(EmptyParam) returns (DomainListResp);
    rpc DeployDomain(DomainCreationParam) returns (DomainCreationResp);
}

message DomainListResp {
    repeated DomainResp domains = 1;
}

message DomainResp {
     string name = 1;
     string status = 2;
     string ip = 3;
     string reason = 4;
}

message DomainCreationParam {
    repeated DomainConfig config = 1;
}

message DomainConfig {
    string name = 1;
    string cpu = 2;
    string memory = 3;
    string disk = 4;
}

message DomainCreationResp {

}


message EmptyParam {}